<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_principal">

    <fragment
        android:id="@+id/nav_principal"
        android:name="com.example.navigationdraweractivity.ui.principal.PrincipalFragment"
        android:label="@string/menu_principal"
        tools:layout="@layout/fragment_principal" />
    <fragment
        android:id="@+id/nav_servico"
        android:name="com.example.navigationdraweractivity.ui.servicos.ServicosFragment"
        android:label="@string/menu_servicos"
        tools:layout="@layout/fragment_servicos" />
    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.example.navigationdraweractivity.ui.clientes.ClientesFragment"
        android:label="@string/menu_clientes"
        tools:layout="@layout/fragment_clientes" />
    <fragment
        android:id="@+id/nav_contato"
        android:name="com.example.navigationdraweractivity.ui.contato.ContatosFragment"
        android:label="@string/menu_contato"
        tools:layout="@layout/fragment_contatos" />
    <fragment
        android:id="@+id/nav_sobre"
        android:name="com.example.navigationdraweractivity.ui.sobre.SobreFragment"
        android:label="@string/menu_sobre"
        tools:layout="@layout/fragment_sobre" />
</navigation>